--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <div class="ToDoContainer">
         <h1>Ma ToDo Liste</h1>
         <input type="text" id="todoInput" placeholder="Ajouter une tâche...">
-        <button>Ajouter</button>
+        <button onClick="addTodo()">Ajouter</button>
+
+        <ul id="todoList">
+           
+        </ul>
     </div>
     <script src="script.js"></script>
 </body>
